n8n-main-backup-20251026-220630.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "4"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"n8n-main","namespace":"n8n"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"n8n-main"}},"template":{"metadata":{"labels":{"app":"n8n-main"}},"spec":{"affinity":{"podAntiAffinity":{"preferredDuringSchedulingIgnoredDuringExecution":[{"podAffinityTerm":{"labelSelector":{"matchExpressions":[{"key":"app","operator":"In","values":["n8n-main"]}]},"topologyKey":"kubernetes.io/hostname"},"weight":100}]}},"conta [...]
  creationTimestamp: "2025-10-26T12:36:53Z"
  generation: 4
  name: n8n-main
  namespace: n8n
  resourceVersion: "1821263"
  uid: 5b7c96d4-3550-4366-b220-a1ea10279019
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: n8n-main
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: n8n-main
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - n8n-main
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers:
      - args:
        - start
        command:
        - n8n
        image: n8nio/n8n:latest
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 5678
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
        name: n8n-main
        ports:
        - containerPort: 5678
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 5678
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: "2"
            memory: 4Gi
          requests:
            cpu: "1"
            memory: 1Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /home/node/.n8n
          name: n8n-main-files
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: n8n-main-files
        persistentVolumeClaim:
          claimName: n8n-main-pvc
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2025-10-26T12:38:28Z"
    lastUpdateTime: "2025-10-26T12:38:28Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2025-10-26T12:36:54Z"
    lastUpdateTime: "2025-10-26T13:09:33Z"
    message: ReplicaSet "n8n-main-67849d68b5" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 4
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
