n8n-worker-backup-20251026-220630.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"n8n-worker","namespace":"n8n"},"spec":{"replicas":2,"selector":{"matchLabels":{"app":"n8n-worker"}},"template":{"metadata":{"labels":{"app":"n8n-worker"}},"spec":{"affinity":{"podAntiAffinity":{"preferredDuringSchedulingIgnoredDuringExecution":[{"podAffinityTerm":{"labelSelector":{"matchExpressions":[{"key":"app","operator":"In","values":["n8n-worker"]}]},"topologyKey":"kubernetes.io/hostname"},"weight":100}]} [...]
  creationTimestamp: "2025-10-26T12:36:56Z"
  generation: 2
  name: n8n-worker
  namespace: n8n
  resourceVersion: "1841147"
  uid: a616bb0c-e968-43f7-b66b-61cd15b19d8f
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: n8n-worker
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: n8n-worker
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - n8n-worker
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers:
      - args:
        - worker
        command:
        - n8n
        image: n8nio/n8n:latest
        imagePullPolicy: Always
        name: n8n-worker
        resources:
          limits:
            cpu: "1"
            memory: 2Gi
          requests:
            cpu: 500m
            memory: 512Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 2
  conditions:
  - lastTransitionTime: "2025-10-26T12:36:56Z"
    lastUpdateTime: "2025-10-26T12:38:06Z"
    message: ReplicaSet "n8n-worker-6bf7b8fd4" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2025-10-26T14:46:40Z"
    lastUpdateTime: "2025-10-26T14:46:40Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 2
  readyReplicas: 2
  replicas: 2
  updatedReplicas: 2
